feat: add IntelliJ IDE settings support to workspace tooling
- Add ide: section to workspace.yaml for language-level and jdk-name
- Extend ws:upgrade to enforce IDE settings in .idea/misc.xml
- Include curated .idea/ slice in .gitignore (misc.xml, encodings.xml, etc.)
- Refactor gitignore upgrade to use sectioned additions with headers
- Add comprehensive tests for IDE settings and gitignore logic
- Bump ike-tooling version to 111